# newnu.tv

./: .env.admin.example  .env.worker.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/twitch/: Cargo.toml
crates/twitch/src/: lib.rs  models.rs
crates/twitch/src/models/: clip.rs  game.rs
dev/: run_admin.sh  run_worker.sh  watch_admin.sh  watch_worker.sh
services/admin/: Cargo.toml
services/admin/migrations/: 0001.up.sql  0002.up.sql
services/admin/src/: conf.rs  db.rs  error.rs  g.rs  http.rs  job.rs  main.rs  prelude.rs  views.rs
services/admin/src/db/: clip.rs  game.rs  setting.rs
services/admin/src/g/: clips.rs
services/admin/src/http/: clips.rs  dev.rs  game.rs  home.rs  settings.rs
services/admin/src/job/: fetch_new_game_clips.rs
services/admin/src/models/: clip.rs
services/admin/src/views/: base.hbs  base_xl.hbs  clips.hbs  game.hbs  homepage.hbs  search_game.hbs  settings.hbs
services/worker/: Cargo.toml  build.rs
services/worker/migrations/: 0001.up.sql  0002.up.sql
services/worker/proto/: worker.proto
services/worker/src/: conf.rs  db.rs  error.rs  g.rs  job.rs  lib.rs  main.rs  prelude.rs  service.rs
services/worker/src/db/: clip.rs  game.rs
services/worker/src/job/: fetch_new_game_clips.rs
services/worker/src/models/: clip.rs
tests/assets/: clips.sql
