[workspace]
members = ["services/worker", "crates/twitch"]
resolver = "2"
package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenvy = "0.15"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
rand = "0.8"
rusqlite = { version = "0.29", features = ["chrono"] }
rusqlite_migration = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
tonic = "0.10"
uuid = "1"
