[workspace]
members = ["crates/twitch", "services/admin", "services/worker"]
resolver = "2"
package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hyper = { version = "0.14", features = ["full"] }
itertools = "0.11"
log = "0.4"
pretty_env_logger = "0.5"
rand = "0.8"
rusqlite = { version = "0.29", features = ["bundled-full"] }
rusqlite_migration = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
tonic = "0.10"
uuid = "1"
