[package]
name = "admin"
version.workspace = true
edition.workspace = true


[dependencies]
anyhow.workspace = true
axum = { version = "0.6", features = ["headers"] }
chrono.workspace = true
dotenvy.workspace = true
handlebars = "4.4"
hyper.workspace = true
itertools.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
rand.workspace = true
rusqlite_migration.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio-cron-scheduler = "0.9"
tokio.workspace = true
tonic.workspace = true
twitch = { path = "../../crates/twitch", features = ["sqlite"] }
uuid.workspace = true
worker = { path = "../worker" }
