[package]
name = "worker"
version.workspace = true
edition.workspace = true


[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
hyper.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
prost = "0.12"
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build = "0.10"
